Added Toolbar need to fix the names which shows in toolbar and add the menu. And to see to fix the MainScreen and SplashScreen toolbar.

--- a/Snowboard/app/src/main/res/navigation/nav_graph.xml
+++ b/Snowboard/app/src/main/res/navigation/nav_graph.xml
@@ -14,5 +14,5 @@
     <fragment
         android:id="@+id/mainScreenFragment"
         android:name="com.example.snowboard.fragments.MainScreenFragment"
-        android:label="MainScreenFragment" />
+        android:label="Home" />
 </navigation>
