--- a/Snowboard/app/src/main/res/layout/activity_main.xml
+++ b/Snowboard/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,15 @@
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/lavender"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_constraintBottom_toTopOf="@id/navHostFragment"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/navHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -17,6 +26,8 @@
             android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            tools:layout_editor_absoluteX="0dp"
             tools:layout="@layout/fragment_splash_screen" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
